# gamejam

./: .gitignore  .gitmodules
BGJ06-rainbowmb/: ideas.md
BGJ06-rainbowmb/src/: conf.lua  main.lua
BGJ06-rainbowmb/src/entities/: blob.lua  bomb.lua  bullet.lua  enemy.lua  explosion.lua  tank.lua
BGJ06-rainbowmb/src/scene/: entity.lua  world.lua
BGJ06-rainbowmb/src/states/: game.lua
BGJ06-rainbowmb/src/util/: helper.lua  vector.lua
RGJ04/: AUTHORS  CMakeLists.txt  Makefile  README  sfml.patch
RGJ04/pkg/: ameboid32  ameboid64  launch-aneboid.sh
RGJ04/pkg/gfx/: thisisyou.psd
RGJ04/pkg/lib32/: libFLAC.so.8  libfreetype.so.6  libjpeg.so.8  libogg.so.0  libopenal.so.1  libsfml-audio.so.2.0  libsfml-graphics.so.2.0  libsfml-system.so.2.0  libsfml-window.so.2.0  libsndfile.so.1  libvorbis.so.0  libvorbisenc.so.2
RGJ04/pkg/lib64/: libFLAC.so.8  libfreetype.so.6  libjpeg.so.8  libogg.so.0  libopenal.so.1  libsfml-audio.so.2.0  libsfml-graphics.so.2.0  libsfml-system.so.2.0  libsfml-window.so.2.0  libsndfile.so.1  libvorbis.so.0  libvorbisenc.so.2
RGJ04/src/: Actor.cpp  Actor.hpp  AiActor.cpp  AiActor.hpp  Area.cpp  Area.hpp  Definitions.hpp  PlayerActor.cpp  PlayerActor.hpp  Point.cpp  Point.hpp  World.cpp  World.hpp  main.cpp
src/: conf.lua  main.lua
src/entities/: bomb.lua  building.lua  bullet.lua  enemy.lua  tank.lua
src/scene/: entity.lua  world.lua
src/states/: game.lua
src/util/: vector.lua
